--- a/MPP.Tracer/MPP.Tracer.csproj
+++ b/MPP.Tracer/MPP.Tracer.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITracer.cs" />
+    <Compile Include="MethodTraceResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadTraceResult.cs" />
+    <Compile Include="Tracer.cs" />
+    <Compile Include="TraceResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
